plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
}

android {
    namespace 'it.unitn.disi.fumiprovv.roommates'
    compileSdk 33

    defaultConfig {
        applicationId "it.unitn.disi.fumiprovv.roommates"
        minSdk 24
        targetSdk 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    buildFeatures {
        viewBinding true
    }
}

dependencies {
    def nav_version = "2.5.3"
    def fragment_version = "1.5.7"


    // Jetpack navigation
    implementation "androidx.navigation:navigation-fragment:$nav_version"
    implementation "androidx.navigation:navigation-ui:$nav_version"

    // Jetpack fragment
    implementation "androidx.fragment:fragment:$fragment_version"

    // Firebase
    implementation platform('com.google.firebase:firebase-bom:32.0.0')
    // Auth
    //implementation 'com.google.firebase:firebase-auth-ktx'
    implementation 'com.google.firebase:firebase-auth'
    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'

    // Database
    implementation 'com.google.firebase:firebase-firestore'

    // Splash screen
    implementation "androidx.core:core-splashscreen:1.0.0"


    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.annotation:annotation:1.3.0'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'

    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
}